MCR-3285 use DateTimeFormatter instead of SimpleDateFormat